<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.gusoliveira21.gamequestionskotlin.view.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.gusoliveira21.gamequestionskotlin.view.GameFragment"
        android:label="@string/label_game"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_overFragment"
            app:destination="@id/overFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_gameFragment_to_winFragment"
            app:destination="@id/winFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_gameFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.gusoliveira21.gamequestionskotlin.view.winFragment"
        android:label="@string/label_win"
        tools:layout="@layout/fragment_win">
        <action
            android:id="@+id/action_winFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/overFragment"
        android:name="com.gusoliveira21.gamequestionskotlin.view.OverFragment"
        android:label="@string/label_game_over"
        tools:layout="@layout/fragment_over">
        <action
            android:id="@+id/action_overFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_overFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.gusoliveira21.gamequestionskotlin.view.aboutFragment"
        android:label="@string/label_about"
        tools:layout="@layout/fragment_about" />
</navigation>