<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name=".MyActivity"
    android:configChanges="uiMode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="53dp" />


        <TextView
            android:id="@+id/point"
            style="@style/game_points"
            android:text="@string/point1"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/game_points"
            android:text="@string/point_bar"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/point" />

        <TextView
            android:id="@+id/textView2"
            style="@style/game_points"
            android:text="@string/point3"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/game_CardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/pergunta"
                    style="@style/game_text_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Qual elemento XML permite registrar uma atividade com a atividade do iniciador?" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <RadioButton
                android:id="@+id/radioZero"
                style="@style/game_RadioButton_item"
                tools:text="intent-filter" />

            <RadioButton
                android:id="@+id/radioUm"
                style="@style/game_RadioButton_item"
                tools:text="app-registry" />

            <RadioButton
                android:id="@+id/radioDois"
                style="@style/game_RadioButton_item"
                tools:text="launcher-registry" />

            <RadioButton
                android:id="@+id/radioTres"
                style="@style/game_RadioButton_item"
                tools:text="app-launcher" />
        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/submit"
            style="@style/game_button_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="681dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>